# TankBattleOL

./: .gitignore  client-compose.yml  client.Dockerfile  server-compose.yml  server.Dockerfile
client/assets/res/animation/game/: ani_bullet_blast.anim  ani_edittank_scintillation.anim  ani_gameover.anim  ani_prop_twinkle.anim  ani_tank_blast.anim  ani_tank_born.anim  ani_tank_shield.anim  ani_twinkle.anim
client/assets/res/animation/mainmenu/: loading.anim  netwait.anim
client/assets/res/image/bullet/: bullet.plist
client/assets/res/image/menu/: ready.plist
client/assets/res/image/prop/: prop.plist
client/assets/res/image/scenery/: scenery.plist  scenery_s.plist
client/assets/res/image/tank/: enemytank.plist  playertank.plist
client/assets/res/prefab/: BornAni.prefab  Bullet.prefab  BulletBlastAni.prefab  GainScoreAni.prefab  GameOverAni.prefab  GameResult.prefab  GameStartAni.prefab  GameSuccess.prefab  HomeBase.prefab  Prop.prefab  PropSpadeDisappearAni.prefab  Scenery.prefab  ShieldAni.prefab  TankBlastAni.prefab  TankEnemy.prefab  TankMapEdit.prefab  TankPlayer.prefab  TankSelect.prefab
client/assets/resources/data/: DifficultyData.json  TankData.json
client/assets/resources/data/mapdata/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  (+5 more)
client/assets/resources/prefab/: ChooseDialog.prefab  SureDialog.prefab  Toast.prefab
client/assets/scene/: Game.fire  Menu.fire
client/assets/scripts/app/: GameConfig.ts
client/settings/: builder.json  project.json  services.json
common/define/: socket_def.h
common/log/: log.h
common/utils/: utils.h
proxy/: CMakeLists.txt  main.cpp  proxy.sln  proxy.vcxproj  proxy.vcxproj.filters
proxy/proxy_server/: clients_manager.cpp  clients_manager.h  proxy_server.cpp  proxy_server.h
proxy/socket_client/: socket_client.cpp  socket_client.h
proxy/ws_server/: ws_server.cpp  ws_server.h
server/: CMakeLists.txt  base_library.h  main.cpp  server.sln  server.vcxproj  server.vcxproj.filters  socket_server.cpp  socket_server.h  utils.h  work_server.cpp  work_server.h
server/game_server/: game_def.h  game_req.h  game_server.cpp  game_server.h  player.h  room.cpp  room.h
server/log/: log.h
server/proto/: basereq.pb.cc  basereq.pb.h  basereq.proto  gamereq.pb.cc  gamereq.pb.h  gamereq.proto  test.pb.cc  test.pb.h  test.proto
server/socket_server/: socket_def.h  socket_server.cpp  socket_server.h
server/work_server/: work_def.h  work_req.h  work_server.cpp  work_server.h
(+68 files in other folders)
